--- a/src/fullhouse/ToernooiMaken.form
+++ b/src/fullhouse/ToernooiMaken.form
@@ -6,7 +6,6 @@
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
-    <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
   </SyntheticProperties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
@@ -153,7 +152,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
-        <Property name="text" type="java.lang.String" value="plaats"/>
+        <Property name="text" type="java.lang.String" value="plaats                        :"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="jb_cancel">
